<resources>
    <string name="nombre">FamiliaLaureana</string>
    <string name="app_name"></string>
    <string name="title_activity_pre_registro">Pre_registro</string>
    <string name="estuante">Estudiante</string>
    <string name="ya_tengo_mi_cuenta">Ya tengo mi cuenta</string>
    <string name="padre">padre</string>
    <string name="registro">Registro</string>
    <string name="docente">Docente</string>
    <string name="registrarse">Registrarse</string>
    <string name="mensale">A la plataforma de gestion Academica y comunicaion Si usted ya es parte puede iniciar sesion Caso contrario registrese para ingresar a la plataforma</string>
    <string name="edmodo">Edmodo</string>
    <string name="soy">SOY:</string>
    <string name="entra_a_nuestra_red_social">Entra a nuestra red social</string>
    <string name="i_e_p">I. E. P.</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="laura_de_santa_catalina">Laura de Santa Catalina</string>
    <string name="llamar">Llamar</string>
    <string name="numero">numero de la institucion</string>
    <string name="escribir">Escribir el mensaje aquí</string>
    <string name="enviar">Enviar Memsaje</string>
    <string name="bienvenido_a">BIENVENIDO(A)</string>
    <string name="entra_a_nuestra_plataforma">Entra a nuestra plataforma</string>
    <string name="visita_nuestro_sitio_web">Visita nuestro sitio web</string>
    <string name="ver_ubicaion_en_mapa">Ver ubicaion en mapa</string>
    <string name="mensaje">Mensaje</string>
    <string name="title_activity_login">Login</string>
    <string name="buscar">Buscar...</string>

    <string name="login">Inicie sesion con su cuenta</string>
    <string name="usuario">Usuario</string>
    <string name="Password">Contraseña</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="inicio">iniciar Sesion</string>
    <string name="cuenta">No tienes cuenta? REGISTRESE</string>
    <string name="O">O iniciar Sesion con </string>
    <string name="olvidarContra">Olvidaste tu contraseña?</string>
    <string name="title_activity_login_activityn">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="error_invalid_email">el correo es incorrecto</string>
    <string name="error_invalid_password">ingrese almenos 4 caracteres</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">ingrese su correo</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_ubicacion">Mapa</string>
    <string name="dni">DNI</string>
    <string name="verificar">Verificar Cuenta</string>
    <string name="verifi">Verificación de DNI</string>
    <string name="iniciar">Iniciar SESION? </string>


    <!-- Strings de Registro de apoderados -->
    <string name="bienvenido">BIENVENIDO : </string>
    <string name="numerocel">ingrese su numero de celular</string>
    <string name="correo">Ingrese su correo electronico</string>
    <string name="datosInicio">Datos de Inicio de Sesion</string>
    <string name="usuarioAP">Ingrese su nombre de usuario</string>
    <string name="Contrasenia">Ingrese su contraseña</string>
    <string name="contreDE">Repita su contraseña</string>
    <string name="busque">Busque por DNI o nombre de su hijo</string>
    <string name="title_activity_registro_alumnos">Registro_alumnos</string>

    <string name="no">No</string>
    <string name="mensaj">MENSAJE DE RESPUESTA</string>
    <string name="si">SI</string>
    <string name="confcuenta">YA tengo mi cuenta</string>
    <string name="mensajconf">MENSAJE DE CONFIRMACION</string>

    <!-- String de layout de REcuperar contraseña -->
    <string name="verificarCont">Enviar Mensaje A EMAIL</string>
    <string name="recuperar">Recupere su Contraseña</string>
    <string name="title_activity_referencia">ReferenciaActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_pag_principal_padre">PagPrincipalPadre</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_prueva_tab">pruevaTabActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>


    <string-array name="horario">
        <item>Horario Semanal</item>
        <item>Calendario de Actividades</item>
    </string-array>
    <string name="filtrar">Filtrar por: </string>
    <string name="filtraHijo">Seleccionar nombre del hijo</string>

    <string name="title_activity_prueva_navigation">PruevaNavigation</string>


    <string name="progra">Programación</string>
    <string name="Matemat">Matematicas</string>
    <string name="comuni">Comunicacion</string>
    <string name="robotica">Robotica</string>
    <string name="historia">Historia</string>
    <string name="geografia">Geografía</string>

    <string name="logro">LOGRO ESPERADO</string>
    <string name="resumen">Resumen de notas por semestre</string>
    <string name="resumenx">Resumen de notas por asignaturas</string>
    <string name="curso">CURSOS</string>

    <string name="asistencia">A: Asistio   </string>
    <string name="tardanza">T: Tarde   </string>
    <string name="permiso">P: Per. justificado   </string>
    <string name="falta">F: Falta </string>
    <string name="blanco">Blanco: Asistencia no marcada</string>
    <string name="title_activity_prueva_navegador">pruevaNavegador</string>
    <string name="title_activity_navegador_pruevas">NavegadorPruevas</string>
    <string name="title_activity_pagina_principal_docet">PaginaPrincipalDocet</string>


    <string name="namepestaña1">franment uno</string>
    <string name="namepestaña2">franment dos</string>
    <string name="namepestaña13">franment tres</string>

    <string name="publicaion1w">Se comunica a todos los padres de familia de primer grado de primaria, a una reunion que se llevara a cabo el dia 3 de frebrero del presente año, n el aula de clase. para tratar sobre los paseos del campo. </string>
    <string name="title_activity_pag_principal_alum">PagPrincipalAlum</string>


</resources>
