<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context="pe.edu.lsc.familialaureana.view.LoginGeneral">
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/logo1"
                android:layout_weight="1"
                android:contentDescription=""
                tools:ignore="ContentDescription,InefficientWeight" />
            <TextView
                android:text="@string/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="@dimen/text_size_standard2" />
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/layout_marginTop2"
                android:layout_height="wrap_content">
                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/usuario"
                    android:inputType="textEmailAddress"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>


            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_marginTop2"
                android:text="@string/inicio"
                android:textStyle="bold"
                android:textSize="@dimen/text_size_standard"
                android:textColor="@android:color/background_light"
                android:background="@color/colorNaranja" />
            <TextView
                android:text="@string/cuenta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textRegistrase"
                android:layout_marginTop="@dimen/layout_marginTop"
                android:textAlignment="center"
                android:textSize="@dimen/text_size_standard"
                android:textColor="@android:color/holo_red_dark" />
            <TextView
                android:text="@string/O"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textOlvidoContrasenia"
                android:layout_marginTop="@dimen/layout_marginTop"
                android:textAlignment="center"
                android:textColor="@android:color/background_dark" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_marginTop="40dp"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/goo"
                    android:id="@+id/imageGoogle"
                    android:layout_weight="1"
                    tools:ignore="ContentDescription" />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/edmodo"
                    android:id="@+id/imageEdmodo"
                    android:layout_weight="1"
                    tools:ignore="ContentDescription" />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/face"
                    android:id="@+id/imageFace"
                    android:layout_weight="1"
                    tools:ignore="ContentDescription" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/google"
                    android:gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView9"
                    android:textSize="@dimen/text_size_standard"
                    android:textColor="@color/colorNegro"
                    android:layout_weight="1" />
                <TextView
                    android:text="@string/edmodo"
                    android:gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView8"
                    android:textSize="@dimen/text_size_standard"
                    android:textColor="@color/colorNegro"
                    android:layout_weight="1" />
                <TextView
                    android:text="@string/facebook"
                    android:gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView5"
                    android:textSize="@dimen/text_size_standard"
                    android:textColor="@color/colorNegro"
                    android:layout_weight="1" />
            </LinearLayout>
            <TextView
                android:text="@string/olvidarContra"
                android:layout_marginTop="5dp"
                android:gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textRecuperarContrasena"
                android:textSize="@dimen/text_size_standard2"
                android:textColor="@android:color/holo_red_dark" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
