<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pe.edu.lsc.familialaureana.Confirmar_Dni_Error">

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="0dp" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="368dp"
        android:layout_height="495dp"
        tools:layout_editor_absoluteY="8dp"
        tools:layout_editor_absoluteX="8dp">
        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1">
            <TextView
                android:text="@string/mensajconf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView11"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textColor="@android:color/black" />

            <TextView
                android:text="@string/mensaj"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:id="@+id/textViemensaje"
                android:layout_margin="10dp"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textColor="@android:color/holo_red_dark"
                android:background="@android:color/background_light"
                android:layout_weight="0.60" />



            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/layout_marginTop"
                android:layout_height="match_parent">



                <Button
                    android:id="@+id/btnNo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/colorRojo"
                    android:text="@string/no"
                    android:textColor="@android:color/background_light"
                    android:textSize="@dimen/text_size_standard"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/btnSi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/colorRojo"
                    android:text="@string/si"
                    android:textColor="@android:color/background_light"
                    android:textSize="@dimen/text_size_standard"
                    tools:ignore="ButtonStyle" />


            </LinearLayout>
            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/confcuenta"
                android:textStyle="bold"
                android:textSize="@dimen/text_size_standard"
                android:textColor="@android:color/background_light"
                android:background="@color/colorNaranja" />


        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
