<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context="pe.edu.lsc.familialaureana.view.VerificacionDni">

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="0dp" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:text="@string/recuperar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView10"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textColor="@android:color/black" />
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_marginTop"
                app:srcCompat="@drawable/logo1"
                android:id="@+id/imageView5"
                android:layout_weight="1"
                android:contentDescription=""
                tools:ignore="ContentDescription,InefficientWeight" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/correo"
                    android:inputType="textEmailAddress"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:text="@string/verificarCont"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:id="@+id/btnenviarMensaje"
                android:background="@color/colorNaranja"
                android:textColor="@android:color/background_light"
                android:textStyle="normal|bold"
                android:textSize="@dimen/text_size_standard2" />
            <TextView
                android:text="@string/cuenta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textRegistrase"
                android:layout_marginTop="@dimen/layout_marginTop"
                android:textAlignment="center"
                android:textSize="@dimen/text_size_standard"
                android:textColor="@android:color/holo_red_dark" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>

